added basic categories, new posts

--- a/_posts/2013-09-27-old-posts.md
+++ b/_posts/2013-09-27-old-posts.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Old posts
+category: blog
 ---
 <p>Since I&#8217;m lazy, I&#8217;m not going to bother bring my old posts to tumblr. I might have some energy to copy/paste/reformat them, but not today. If you need, the link is <a href="http://jonathan.roon.io">http://jonathan.roon.io</a></p>
 <p>// so I did that thing I said I wasn&#8217;t going to do, and copied a <em>few </em>posts from roon over to this page. Only a few though, since it only took about 5 minutes.</p>
