--- a/_posts/2013-10-17-device6.md
+++ b/_posts/2013-10-17-device6.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Device 6
+category: gaming
 ---
 <img alt="Device 6" width="590" height="300" src="/images/device6.png" />
 
