--- a/_posts/2014-02-12-unity.md
+++ b/_posts/2014-02-12-unity.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Unity
+category: dev
 ---
 
 It's Unity. I keep going around and around on what tools to use, and I realised I'm stalling. I see two paths ahead and I'm stuck at the crossroads, but the answer apparently is to just take a step back. I would love to use a *simple* set of tools to make games, but I would hate to shoot myself in the foot later on (this is the case with HaxeFlixel). Unity is perfect for me right now because the base set of tools is free, and there are **TONS** of resources online if I need help. And with the new addition of 2D tools, which I had been a little leery of, it's just perfect. I don't even need to use Futile anymore, which is a great add on when Unity was just 3D, but seems to be unneeded today.
