--- a/_posts/2014-04-20-lapse.md
+++ b/_posts/2014-04-20-lapse.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Lapse
+category: iOS
 ---
 
 I think I will let my Apple Developer account finally expire this May. I have spent three years and $300 in this program with a simple goal of making back the money I put into it. I have not done that. I think over the three years I made about $50 from the two apps I released. Not quite worth it at the time to keep that account open.
