--- a/_posts/2014-06-09-indie.md
+++ b/_posts/2014-06-09-indie.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Why I'm Indie
-published: true
+category: blog
 ---
 
 I feel like in the last few years of the indie revolution, most developers who are succeeding are ones who left their day job as a programmer, either in games or other fields, and start making and selling their own projects. I found my way here on a different route. I never went to school for Computer Science, my degree is in Aquatic Biology. When I was young and deciding what I wanted to be when I grew up (still haven't), I reasoned that I shouldn't go to school for computers because I loved them as a hobby, and didn't want to ruin that feeling by making it my job. How ass backwards is that!? I was conditioned that your job is the thing you hate that you have to do so you can have fun in your free time. I never imagined loving my job and getting paid for it.
