--- a/_posts/2013-06-11-renewing.md
+++ b/_posts/2013-06-11-renewing.md
@@ -1,5 +1,6 @@
 ---
 layout: post
 title: Renewing
+category: iOS
 ---
 <p>Definitely renewing my iOS developer membership today. WWDC always inspires me and reinvigorates my passion for what Apple does. I thought I wanted to explore other platforms. I thought buttons and joysticks mattered&#8230;well they do for certain games. And I still may make that game for Vita, but really, do be serious about this, iOS is the way to go.</p>
