--- a/_posts/2014-01-14-itch-io.md
+++ b/_posts/2014-01-14-itch-io.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: shielDefense on itch.io
+category: dev
 ---
 So, I'm not sure how this will go, but I want to try. I decided to package up what I have so far with shielDefense and try to sell it on <a href="http://jonathanhirz.itch.io/shieldefense">itch.io</a>. I don't really know how smart it is to sell an unfinished prototype + source code to a game, but I figure someone might want to check it out. Honestly, I need to take a break from this game and focus on something much smaller in scope, and work on <strong>actually finishing something </strong>before focusing on larger projects. And even though this game isn't that complex, there's a lot in the planning that is over my head and time limit right now.
 
